# xxUSBSentinel

./: .gitignore  .tool-versions  CONTEXT.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  justfile  xxUSBSentinel.sln
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  openspec-badge.yml  publish-chocolatey.yml  publish-winget.yml  release.yml  scorecard.yml
docs/: README.md  advanced.md  configuration.md  hooks.md
openspec/: config.yaml
openspec/specs/kill-switch-core/: spec.md
packaging/appimage/: xxusbsentinel.desktop
packaging/chocolatey/: xxusbsentinel.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
src/: app.rs  config.rs  main.rs  sentinel.rs  shutdown.rs  tray.rs  usb.rs  wipe.rs
xxUSBSentinel/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  packages.config  xxUSBSentinel.csproj
xxUSBSentinel/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
