[package]
name = "xxusbsentinel"
version = "2.0.5"
edition = "2021"
description = "USB kill switch — shuts down the PC when a mapped USB device is removed"

[dependencies]
eframe = "0.34"
egui = "0.34"
egui_extras = { version = "0.34", features = ["image"] }
arboard = "3.6"
rusb = "0.9"
chrono = { version = "0.4", features = ["clock"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
toml = "1"
dirs = "6.0"
usb-ids = "1"

# Linux: ksni with async-io backend (avoids tokio/zbus conflict with accesskit_unix)
# Build deps: libxdo-dev libusb-1.0-0-dev
[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", default-features = false, features = ["async-io", "blocking"] }

# Windows: tray-icon works out of the box
[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.24"
winreg = "0.56"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
